# gs-cli

./: .gitignore  Cargo.toml  README.md
binary/linux/: gs
src/: error.rs  gs_args.rs  gs_sheet.rs  main.rs  sheet.rs  sheet_model.rs
